<resources>
    <string name="app_name">PranaWallet</string>
    <string name="title_home">Home</string>
    <string name="title_send">Send</string>
    <string name="title_history">History</string>
    <string name="title_backup">Backup</string>
    <string name="title_restore">Restore</string>
    <string name="title_balance">Balance:</string>
    <string name="title_myaddress">My address:</string>
    <string name="title_activity_any_orientation_capture">PranaWallet</string>
    <string name="private_address_image">private key QR-code</string>
    <string name="receive_private_key">Receive private key</string>
    <string name="recieve_private_key_message">Press button below in order to receive private key. Save it in the safe place.</string>
    <string name="input_address_here">Input address here…</string>
    <string name="input_sum_here">Input sum here…</string>
    <string name="scan">Scan</string>
    <string name="image">QR-code</string>
</resources>
